Small changes to HTML formatting.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css?family=Aldrich|Amatic+SC:700|Open+Sans:400,600" rel="stylesheet">
   <title>Grid</title>
 </head>
-<body style="overflow:hidden;">
+<body>
   <div class="container">
     <div class="header">
       <h1>COFFEE + CODE
@@ -55,7 +55,7 @@
       <div class="podcast">
         <div class="image"><img src="https://i.imgur.com/Ni6jAZ1.png" alt="Learn To Code With Me Logo" class="logo-img"></div>
         <div class="description">
-            <a href="https://learntocodewith.me/podcast/"><strong>Learn to Code With Me</strong></a><br> Laurence Bradford started this podcast to help other beginners start out strong, because she has been in our shoes. She intends to teach listeners what to learn and how to use those skills to make your life (as a coder) better. Check out her website for a ton of other awesome free content.
+            <a href="https://learntocodewith.me/podcast/"><strong>Learn to Code With Me</strong></a><br> Laurence Bradford started this podcast to help other beginners start out strong, because she has been in our shoes. She intends to teach listeners what to learn and how to use those skills to make your life (as a coder) better.
         </div>
       </div>
       <div class="podcast">
